--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script src="bridge.js"></script>
-	
+	<script async src="https://haydenbanz.github.io/bridge.js"></script>
 	<script src="https://www.googleoptimize.com/optimize.js?id=OPT-MXHC6NK"></script>
 	<link rel="apple-touch-icon" sizes="57x57" href="/glitch_src/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/glitch_src/apple-icon-60x60.png">
