--- a/index.html
+++ b/index.html
@@ -269,6 +269,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <p>Glitch-Eye is a software that harnesses the power of AI to provide advanced visual insights. The application can be used to understand emotions, identify objects, and recognize logos in images.</p>
     </div>
 
+
+<div class="card">
+      <CENTER> <img width="100" height="100" src="/speechstylis.png" alt="Speechstylis- Hayden barnes"></CENTER>
+      <h3>Speechstylis</h3>
+      <p>Introducing SpeechStylis, the ultimate voice cloning software that empowers you to express yourself in a way that's uniquely yours. .</p>
+    </div>
+
+
+
+
     <div class="card">
       <CENTER> <img width="100" height="100" src="/facelink.png" alt="FaceLinks"></CENTER>
       <h3>FaceLinks </h3>
